--- a/app/templates/adminbs5/css/colors.css
+++ b/app/templates/adminbs5/css/colors.css
@@ -74,7 +74,7 @@
 .bg-maroon {
     background-color: #d81b60!important
 }
-
+\\ alterando
 .bg-gray-active {
     color: #000;
     background-color: #b5bbc8!important
